--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,8 @@ dependencies {
     implementation 'com.squareup.logcat:logcat:0.1'
     implementation 'io.coil-kt:coil:1.4.0'
 
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
+
     kapt 'com.google.dagger:hilt-compiler:2.41'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
     ksp 'androidx.room:room-compiler:2.4.2'
