--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.jlroberts.flixat.HiltTestRunner"
     }
 
     buildTypes {
@@ -50,6 +50,10 @@ android {
     buildFeatures {
         dataBinding true
     }
+    testOptions.unitTests {
+        includeAndroidResources = true
+        returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -70,8 +74,8 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.4.2'
     implementation 'androidx.room:room-runtime:2.4.2'
     implementation 'androidx.room:room-paging:2.4.2'
-    implementation 'androidx.paging:paging-common-ktx:3.1.0'
-    implementation 'androidx.paging:paging-runtime-ktx:3.1.0'
+    implementation 'androidx.paging:paging-common-ktx:3.1.1'
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
     implementation 'com.google.dagger:hilt-android:2.41'
     implementation 'androidx.hilt:hilt-navigation:1.0.0'
     implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
@@ -96,12 +100,46 @@ dependencies {
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
     ksp 'androidx.room:room-compiler:2.4.2'
 
-    testImplementation 'junit:junit:4.13.2'
+    // Dependencies for local unit tests
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
+    testImplementation "org.robolectric:robolectric:4.6.1"
+    testImplementation "com.google.truth:truth:0.44"
+    testImplementation "org.mockito:mockito-core:3.11.2"
+
+    // AndroidX Test - JVM testing
+    testImplementation "androidx.test:core-ktx:1.4.1-alpha04"
+    testImplementation "androidx.test.ext:junit-ktx:1.1.3"
+    testImplementation "androidx.test:rules:1.4.0"
     testImplementation 'com.google.dagger:hilt-android-testing:2.41'
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
+    androidTestImplementation 'io.mockk:mockk-android:1.12.3'
+    testImplementation 'app.cash.turbine:turbine:0.6.0'
+    testImplementation "io.mockk:mockk:1.12.3"
     kaptTest 'com.google.dagger:hilt-compiler:2.41'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.41'
+    androidTestImplementation "androidx.test:core-ktx:1.4.1-alpha04"
+    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.3"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
+    androidTestImplementation "androidx.test:rules:1.4.0"
+    androidTestImplementation "androidx.room:room-testing:2.4.2"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "org.robolectric:annotations:4.6.1"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:3.4.0"
+    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:3.4.0"
+    androidTestImplementation "androidx.navigation:navigation-testing:2.4.1"
+    androidTestImplementation "junit:junit:4.13.2"
+    debugImplementation "androidx.fragment:fragment-testing:1.4.1"
+    implementation "androidx.test:core:1.4.1-alpha04"
+    androidTestImplementation "org.mockito:mockito-core:3.11.2"
+    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.28.1"
     kaptAndroidTest 'com.google.dagger:hilt-compiler:2.41'
 }
