--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,7 +117,7 @@ dependencies {
     testImplementation 'com.google.dagger:hilt-android-testing:2.41'
     testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
     androidTestImplementation 'io.mockk:mockk-android:1.12.3'
-    testImplementation 'app.cash.turbine:turbine:0.6.0'
+    androidTestImplementation 'app.cash.turbine:turbine:0.6.0'
     testImplementation "io.mockk:mockk:1.12.3"
     kaptTest 'com.google.dagger:hilt-compiler:2.41'
 
