--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.kapt'
-    id 'dagger.hilt.android.plugin'
     id 'kotlin-parcelize'
     id 'androidx.navigation.safeargs'
     id 'com.google.devtools.ksp'
@@ -23,7 +22,8 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "com.jlroberts.flixat.HiltTestRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArguments clearPackageData: 'true'
     }
 
     buildTypes {
@@ -39,6 +39,9 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
+    }
+    testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
     }
     kotlinOptions {
         jvmTarget = '11'
@@ -57,7 +60,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -66,9 +68,9 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha04'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-alpha04'
-    implementation 'androidx.lifecycle:lifecycle-common-java8:2.5.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.5.0-alpha05'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     implementation 'androidx.room:room-ktx:2.4.2'
@@ -76,10 +78,6 @@ dependencies {
     implementation 'androidx.room:room-paging:2.4.2'
     implementation 'androidx.paging:paging-common-ktx:3.1.1'
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
-    implementation 'com.google.dagger:hilt-android:2.41'
-    implementation 'androidx.hilt:hilt-navigation:1.0.0'
-    implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
-    implementation 'androidx.hilt:hilt-common:1.0.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -93,53 +91,37 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:19.0.1'
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
     implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation 'io.insert-koin:koin-core:3.1.5'
+    implementation 'io.insert-koin:koin-android:3.1.5'
+    implementation 'io.insert-koin:koin-androidx-navigation:3.1.5'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
 
-    kapt 'com.google.dagger:hilt-compiler:2.41'
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
     ksp 'androidx.room:room-compiler:2.4.2'
 
-    // Dependencies for local unit tests
     testImplementation "junit:junit:4.13.2"
-    testImplementation "org.hamcrest:hamcrest-all:1.3"
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
-    testImplementation "org.robolectric:robolectric:4.6.1"
-    testImplementation "com.google.truth:truth:0.44"
-    testImplementation "org.mockito:mockito-core:3.11.2"
-
-    // AndroidX Test - JVM testing
-    testImplementation "androidx.test:core-ktx:1.4.1-alpha04"
-    testImplementation "androidx.test.ext:junit-ktx:1.1.3"
-    testImplementation "androidx.test:rules:1.4.0"
-    testImplementation 'com.google.dagger:hilt-android-testing:2.41'
-    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
+    androidTestImplementation 'io.insert-koin:koin-test:3.1.5'
     androidTestImplementation 'io.mockk:mockk-android:1.12.3'
     androidTestImplementation 'app.cash.turbine:turbine:0.6.0'
-    testImplementation "io.mockk:mockk:1.12.3"
-    kaptTest 'com.google.dagger:hilt-compiler:2.41'
-
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.41'
-    androidTestImplementation "androidx.test:core-ktx:1.4.1-alpha04"
+    androidTestImplementation "androidx.test:core-ktx:1.4.1-alpha05"
     androidTestImplementation "androidx.test.ext:junit-ktx:1.1.3"
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
     androidTestImplementation "androidx.test:rules:1.4.0"
     androidTestImplementation "androidx.room:room-testing:2.4.2"
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation "org.robolectric:annotations:4.6.1"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:3.4.0"
     androidTestImplementation "androidx.test.espresso:espresso-intents:3.4.0"
     androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:3.4.0"
     androidTestImplementation "androidx.navigation:navigation-testing:2.4.1"
     androidTestImplementation "junit:junit:4.13.2"
     debugImplementation "androidx.fragment:fragment-testing:1.4.1"
-    implementation "androidx.test:core:1.4.1-alpha04"
+    implementation "androidx.test:core:1.4.1-alpha05"
     androidTestImplementation "org.mockito:mockito-core:3.11.2"
     androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.28.1"
-    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.41'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestUtil 'androidx.test:orchestrator:1.4.1'
 }
